--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "chalk": "^3.0.0",
     "cli-table3": "^0.5.1",
     "conf": "^6.2.0",
